Sanity check for legacy GlobalFlag cleanup
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>